Limit max width of username in visible message instead of setting it fixed

--- a/web/css/ChatController.css
+++ b/web/css/ChatController.css
@@ -219,7 +219,7 @@ img.user-avatar {
 }
 
 .message > .user-name {
-  width: 12em;
+  max-width: 12em;
   height: 100%;
   display: inline-block;
 }
